--- a/wp-content/themes/timber-starter-theme/style.css
+++ b/wp-content/themes/timber-starter-theme/style.css
@@ -3,3 +3,105 @@
  * Description: Starter Theme to use with Timber
  * Author: Upstatement and YOU!
 */
+
+
+.nav-main {
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  .nav-main .nav-main-item {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  .nav-drop {
+    float: left;
+    overflow: hidden;
+  }
+  
+  .nav-drop .dropbtn {
+    font-size: 16px;  
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  
+  .nav-main a:hover, .nav-drop:hover .dropbtn {
+    background-color: red;
+  }
+  
+  .nav-drop-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .nav-drop-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .nav-drop-content a:hover {
+    background-color: #ddd;
+  }
+  
+  .nav-drop:hover .nav-drop-content {
+    display: block;
+  }
+.nav-main {
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+      }
+      
+      li {
+        float: left;
+      }
+      
+      li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+      
+      /* Change the link color to #111 (black) on hover */
+      li a:hover {
+        background-color: #111;
+      }
+    
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #097a49;
+    color: white;
+    text-align: center;
+  }
+
+
+  
+
