--- a/wp-content/themes/timber-starter-theme/views/base.twig
+++ b/wp-content/themes/timber-starter-theme/views/base.twig
@@ -34,7 +34,7 @@
 		</section>
 
 		{% block footer %}
-			<footer id="footer">
+			<footer id="footer" class="footer">
 				{% include 'footer.twig' %}
 			</footer>
 			{{ function('wp_footer') }}
