--- a/wp-content/themes/timber-starter-theme/views/menu.twig
+++ b/wp-content/themes/timber-starter-theme/views/menu.twig
@@ -1,10 +1,23 @@
 {% if menu %}
-	<ul>
-	{% for item in items %}
-		<li class="{{ item.classes | join(' ') }}">
-			<a target="{{ item.target }}" href="{{ item.link }}">{{ item.title }}</a>
-			{% include "menu.twig" with {'items': item.children} %}
-		</li>
-	{% endfor %}
-	</ul>
+<nav>
+    <ul class="nav-main">
+        {% for item in menu.items %}
+            <li class="nav-main-item {{ item.classes|join(' ') }} dropdown">
+                <a  class="nav-main-link" href="{{ item.link }}" {{ item.is_target_blank ? 'target="_blank"' }}>{{ item.title }}</a>
+                {% if item.children %}
+                    <ul class="nav-drop">
+                        {% for child in item.children %}
+                            <li class="nav-drop-item">
+                                <a
+                                    href="{{ child.link }}"
+                                    {{ item.is_target_blank ? 'target="_blank"' }}
+                                >{{ child.title }}</a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+            </li>
+        {% endfor %}
+    </ul>
+</nav>
 {% endif %}
