--- a/wp-content/themes/timber-starter-theme/views/html-header.twig
+++ b/wp-content/themes/timber-starter-theme/views/html-header.twig
@@ -12,5 +12,6 @@
     <link rel="author" href="{{ site.theme.link }}/humans.txt" />
     <link rel="pingback" href="{{ site.pingback_url }}" />
     <link rel="profile" href="http://gmpg.org/xfn/11">
+    <script src="https://kit.fontawesome.com/d8849a2cd4.js" crossorigin="anonymous"></script>
     {{function('wp_head')}}
 
