Added footer component and styles content-wrapper

--- a/wp-content/themes/timber-starter-theme/assets/scss/main.scss
+++ b/wp-content/themes/timber-starter-theme/assets/scss/main.scss
@@ -13,3 +13,11 @@
 body{
     margin: 0;
 }
+
+.content-wrapper{
+    display: flex;
+    max-width: 1140px;
+    flex-direction: column;
+    margin: 0 auto;
+    padding: 0 15px;
+}
