Added homepage link to logo

--- a/wp-content/themes/timber-starter-theme/views/single.twig
+++ b/wp-content/themes/timber-starter-theme/views/single.twig
@@ -15,7 +15,7 @@
 				</div>
 			</section>
 
-			<!-- comment box -->
+			{# <!-- comment box -->
 			<section class="comment-box">
 				<!-- comments -->
 				<div class="comments">
@@ -33,7 +33,7 @@
 				    <!-- comment form -->
 				    {% include "comment-form.twig" %}
 				{% endif %}
-			</section>
+			</section> #}
 		</article>
 	</div><!-- /content-wrapper -->
 {% endblock %}
