Added algolia header script to crawel website

--- a/wp-content/themes/timber-starter-theme/views/html-header.twig
+++ b/wp-content/themes/timber-starter-theme/views/html-header.twig
@@ -13,5 +13,6 @@
     <link rel="pingback" href="{{ site.pingback_url }}" />
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <script src="https://kit.fontawesome.com/d8849a2cd4.js" crossorigin="anonymous"></script>
+    <meta name="algolia-site-verification"  content="55F0965FEBB10C29" />
     {{function('wp_head')}}
 
