--- a/wp-content/themes/timber-starter-theme/assets/scss/main.scss
+++ b/wp-content/themes/timber-starter-theme/assets/scss/main.scss
@@ -22,3 +22,98 @@ body{
     padding: 0 15px;
     padding-bottom: 40px;
 }
+
+.acf-map {
+    width: 100%;
+    height: 400px;
+    border: #ccc solid 1px;
+    margin: 20px 0;
+}
+
+// Fixes potential theme css conflict.
+.acf-map img {
+   max-width: inherit !important;
+}
+
+#map {
+    height: 500px;
+    width: 100%;
+}
+
+.title{
+    text-transform: capitalize;
+}
+
+.post-links{
+    text-decoration: none;
+    color: black;
+}
+.post-links:hover {
+    text-decoration: underline;
+    color: rgb(87, 174, 55);
+}
+
+.pagination-block{
+    display: flex;
+    justify-content: center;
+}
+
+.pagination {
+    padding-bottom: 40px;
+    display: flex;
+    padding-left: 0;
+    /* to remove bullets from an unordered list */
+    ul {
+        list-style: none;
+    }
+
+    /* to remove bullets from an ordered list */
+    ol {
+        list-style:none; 
+    }
+
+    li{
+        list-style:none; 
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+}
+.current{
+    background-color: #4CAF50;
+    border-radius: 5px;
+}
+.pagination span, 
+.pagination button,
+.pagination a {
+color: black;
+float: left;
+padding: 8px 16px;
+text-decoration: none;
+}
+.pagination span.active, 
+.pagination button.active,
+.pagination a.active {
+background-color: #4CAF50;
+color: white;
+}
+
+.pagination span:hover:not(.active)
+.pagination button:hover:not(.active),
+.pagination a:hover:not(.active) {
+    background-color: #ddd;
+}
+.pagination span,
+.pagination button,
+.pagination a {
+border-radius: 5px;
+}
+.pagination span.active,
+.pagination button.active,
+.pagination a.active {
+border-radius: 5px;
+}
+.pagination span,
+.pagination button,
+.pagination a {
+transition: background-color .3s;
+}
