--- a/wp-content/themes/timber-starter-theme/views/base.twig
+++ b/wp-content/themes/timber-starter-theme/views/base.twig
@@ -19,7 +19,7 @@
 		</header>
 
 		<section id="content" role="main" class="content-wrapper">
-			{% if title %}<h1>{{title}}</h1>{% endif %}
+			{% if title %}<h1 class="title">{{title}}</h1>{% endif %}
 			<div class="wrapper">
 				{% block content %}
 					Sorry, no content
