--- a/wp-content/themes/timber-starter-theme/views/tease-guides.twig
+++ b/wp-content/themes/timber-starter-theme/views/tease-guides.twig
@@ -1,7 +1,7 @@
 {% extends "tease.twig" %}
 
 {% block content %}
-	<h2 class="h2"><a href="{{post.link}}">{{ post.title }}</a></h2>
+	<h2 class="h2"><a class="post-links"href="{{post.link}}">{{ post.title }}</a></h2>
 		<p>{{ post.excerpt({ words:5, read_more: "Keep reading" }) }}</p>
 		{% if post.thumbnail.src %}
 			<img src="{{ post.thumbnail.src }}" />
