--- a/wp-content/themes/timber-starter-theme/assets/scss/main.scss
+++ b/wp-content/themes/timber-starter-theme/assets/scss/main.scss
@@ -19,8 +19,14 @@ body{
     max-width: 1140px;
     flex-direction: column;
     margin: 0 auto;
-    padding: 0 15px;
-    padding-bottom: 40px;
+    padding: 80px 15px 80px 15px;
+}
+
+.ais-InstantSearch{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .acf-map {
