--- a/wp-content/themes/timber-starter-theme/views/html-header.twig
+++ b/wp-content/themes/timber-starter-theme/views/html-header.twig
@@ -14,5 +14,6 @@
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <script src="https://kit.fontawesome.com/d8849a2cd4.js" crossorigin="anonymous"></script>
     <meta name="algolia-site-verification"  content="55F0965FEBB10C29" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     {{function('wp_head')}}
 
