--- a/wp-content/themes/timber-starter-theme/views/single.twig
+++ b/wp-content/themes/timber-starter-theme/views/single.twig
@@ -1,9 +1,8 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	<div class="content-wrapper">
 		<article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
-			<img src="{{ post.thumbnail.src|resize(1200, 300) }}">
+			{# <img src="{{ post.thumbnail.src|resize(1200, 300) }}"> #}
 			<section class="article-content">
 				<h1 class="article-h1">Guide: {{ post.title }}</h1>
 				<div class="article-body">
@@ -65,5 +64,5 @@
 				{% endif %}
 			</section> #}
 		</article>
-	</div><!-- /content-wrapper -->
+<!-- /content-wrapper -->
 {% endblock %}
