Changed link bootstrap link color

--- a/wp-content/themes/timber-starter-theme/assets/scss/main.scss
+++ b/wp-content/themes/timber-starter-theme/assets/scss/main.scss
@@ -123,6 +123,15 @@ body{
             padding: 10px 0;
 
         }
+        h6{
+            margin-bottom: 0;
+        }
+        a{
+            text-decoration: none;
+        }
+        span{
+            font-size: 14px;
+        }
     }
 }
 
