Reduced address size

--- a/wp-content/themes/timber-starter-theme/assets/scss/main.scss
+++ b/wp-content/themes/timber-starter-theme/assets/scss/main.scss
@@ -123,12 +123,17 @@ body{
             padding: 10px 0;
 
         }
-        h6{
-            margin-bottom: 0;
-        }
+
         a{
             text-decoration: none;
         }
+
+        address,
+        h6{
+            margin-bottom: 0;
+        }
+
+        address,
         span{
             font-size: 14px;
         }
