Added new website logo

--- a/wp-content/themes/timber-starter-theme/assets/scss/main.scss
+++ b/wp-content/themes/timber-starter-theme/assets/scss/main.scss
@@ -5,7 +5,9 @@
     background: linear-gradient(to bottom, white, black);
 }
 
-
+.website-title-image{
+    width: 52px;
+}
 .website-title-logo{
     font-size: 24px;
 }
