Added overflow css to pagination

--- a/wp-content/themes/timber-starter-theme/assets/scss/main.scss
+++ b/wp-content/themes/timber-starter-theme/assets/scss/main.scss
@@ -146,7 +146,8 @@ body{
 }
 
 .ais-Pagination{
-    padding-top: 20px
+    padding-top: 20px;
+    overflow: auto;
 }
 .ais-Hits{
     .ais-Hits-list{
