--- a/wp-content/themes/timber-starter-theme/assets/scss/main.scss
+++ b/wp-content/themes/timber-starter-theme/assets/scss/main.scss
@@ -1,284 +1,2 @@
-.example {
-    display: grid;
-    transition: all .5s;
-    user-select: none;
-    background: linear-gradient(to bottom, white, black);
-}
-
-.website-title-image{
-    width: 52px;
-}
-.website-title-logo{
-    font-size: 24px;
-}
-
-body{
-    margin: 0;
-}
-
-.content-wrapper{
-    display: flex;
-    max-width: 1140px;
-    flex-direction: column;
-    margin: 0 auto;
-    padding: 80px 15px 80px 15px;
-    min-height: 100vh;
-    @media screen and (max-width: 767px) {
-        padding: 20px 15px 20px 15px;
-    }
-}
-
-.ais-InstantSearch{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.ais-SearchBox{
-    width: 100%;
-}
-.ais-MenuSelect{
-    max-width: 639px;
-}
-
-.ais-SearchBox,
-.ais-MenuSelect{
-    padding-bottom: 10px;
-}
-.google-map{
-    margin-bottom: 20px;
-}
-.ais-SearchBox-submit {
-    display: none !important;
-}
-.ais-radius-dropdown{
-    position: relative;
-    width: 100%;
-    max-width: 800px;
-    margin-bottom: 10px;
-    select{
-        margin: auto;
-        display: inline-block;
-        width: 100%;
-        max-width: 639px;
-    }
-}
-.ais-address-form,
-.ais-SearchBox-form{
-    position: relative;
-    font-size: responsive;
-    width: 100%;
-    max-width: 800px;
-    input{
-        padding: 10px;
-        border-radius: 20px;
-        border: 2px solid #ccc;
-        margin: auto;
-        display: inline-block;
-        width: 100%;
-        max-width: 639px;
-    }
-
-    input:focus { 
-        outline: none !important;
-        border-color: rgb(87, 174, 55);
-        box-shadow: 0 0 10px rgb(87, 174, 55);
-        -webkit-transition: all .5s ease;
-        -moz-transition: all .5s ease;
-        transition: all .5s ease; 
-    }
-    textarea:focus { 
-        outline: none !important;
-        border-color: rgb(87, 174, 55);;
-        box-shadow: 0 0 10px rgb(87, 174, 55);
-        -webkit-transition: all .5s ease;
-        -moz-transition: all .5s ease;
-        transition: all .5s ease; 
-    }
-    .ais-SearchBox-reset,
-    .ais-SearchBox-submit{
-        padding: 10px 20px;
-        border-radius: 20px;
-        border: 2px solid #ccc;
-        background-color: #f0f0f0;
-        color: #333;
-        cursor: pointer;
-        transition: background-color 0.3s;
-        margin: auto;
-        display: inline-block;
-        margin-left: 10px;
-        &:hover{
-            background-color: #e0e0e0;
-            -webkit-transition: all .5s ease;
-            -moz-transition: all .5s ease;
-            transition: all .5s ease; 
-        }
-
-        .ais-SearchBox-submitIcon{
-            width: 15px;
-            height: 15px;
-        }
-    }
-
-    .ais-SearchBox-reset{
-        display: none !important;
-        @media screen and (max-width: 767px) {
-            display: flex;
-            justify-content: center;
-            align-items: end;
-            width: 95%;
-            margin-top: 10px;
-            margin-right: 20px;
-        }
-    }
-}
-.ais-address-form{
-    padding-bottom: 10px;
-}
-#map{
-    margin-bottom: 20px;
-}
-
-.input-address-form{
-    background-repeat: no-repeat !important;
-    background-position: 96%;
-    background-size: 16px 19px;
-}
-
-.ais-Pagination{
-    padding-top: 20px;
-    overflow: auto;
-}
-.ais-Hits{
-    .ais-Hits-list{
-        list-style: none;
-        padding-left: 0;
-    }
-
-    .ais-Hits-item{
-        padding: 15px 0;
-        border-bottom: 1px solid black;
-        margin-bottom: 10px;
-        max-width: fit-content;
-        @media screen and (max-width: 767px) {
-            max-width: none;
-            padding: 10px 0;
-
-        }
-
-        a{
-            text-decoration: none;
-        }
-
-        address,
-        h6{
-            margin-bottom: 0;
-        }
-
-        address,
-        span{
-            font-size: 14px;
-        }
-    }
-}
-
-.acf-map {
-    width: 100%;
-    height: 400px;
-    border: #ccc solid 1px;
-    margin: 20px 0;
-}
-
-// Fixes potential theme css conflict.
-.acf-map img {
-   max-width: inherit !important;
-}
-
-#map {
-    height: 300px;
-
-    @media screen and (min-width: 767px) {
-        height: 500px;
-    }
-    width: 100%;
-}
-
-.title{
-    text-transform: capitalize;
-}
-
-.post-links{
-    text-decoration: none;
-    color: black;
-}
-.post-links:hover {
-    text-decoration: underline;
-    color: rgb(87, 174, 55);
-}
-
-.pagination-block{
-    display: flex;
-    justify-content: center;
-}
-
-.pagination {
-    padding-bottom: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left: 0;
-    /* to remove bullets from an unordered list */
-    ul {
-        list-style: none;
-    }
-
-    /* to remove bullets from an ordered list */
-    ol {
-        list-style:none; 
-    }
-
-    li{
-        list-style:none; 
-        padding-left: 5px;
-        padding-right: 5px;
-    }
-}
-.current{
-    background-color: #4CAF50;
-    border-radius: 5px;
-}
-.pagination span, 
-.pagination button,
-.pagination a {
-color: black;
-float: left;
-padding: 8px 16px;
-text-decoration: none;
-}
-// .pagination span.active, 
-// .pagination button.active,
-// .pagination a.active {
-// background-color: #4CAF50;
-// color: white;
-// }
-
-// .pagination span:hover:not(.active)
-// .pagination button:hover:not(.active),
-// .pagination a:hover:not(.active) {
-//     background-color: #ddd;
-// }
-.pagination span,
-.pagination button,
-.pagination a {
-border-radius: 5px;
-}
-.pagination span.active,
-.pagination button.active,
-.pagination a.active {
-border-radius: 5px;
-}
-.pagination span,
-.pagination button,
-.pagination a {
-transition: background-color .3s;
-}
+@import "tailwindcss";
+@import "./google-map.scss";
