--- a/wp-content/themes/timber-starter-theme/views/page.twig
+++ b/wp-content/themes/timber-starter-theme/views/page.twig
@@ -1,7 +1,7 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	<div class="content-wrapper">
+	<div class="">
 		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
 			<section class="article-content">
 				<h1 class="article-h1">{{post.title}}</h1>
@@ -10,5 +10,5 @@
 				</div>
 			</section>
 		</article>
-	</div><!-- /content-wrapper -->
+	</div><!-- / -->
 {% endblock %}
