Deleted unecessary twig files, code split js files into bundles, only load necessary js

--- a/wp-content/themes/timber-starter-theme/views/base-apppage.twig
+++ b/wp-content/themes/timber-starter-theme/views/base-apppage.twig
@@ -8,7 +8,7 @@
 
 	<body class="{{body_class}}" data-template="base.twig">
 		{{ function('wp_body_open') }}
-	 	<div id="app"></div>
+	 	<div id="appPage" :message="hello there"></div>
 		{{ function('wp_footer') }}
 	</body>
 </html>
