Created index js file for page template

--- a/wp-content/themes/timber-starter-theme/views/base-appsingleguide.twig
+++ b/wp-content/themes/timber-starter-theme/views/base-appsingleguide.twig
@@ -5,10 +5,9 @@
 	{% endblock %}
 	</head>
 {% endblock %}
-
 	<body class="{{body_class}}" data-template="base.twig">
 		{{ function('wp_body_open') }}
-	 	<div id="appPage" :message="hello there"></div>
+	 	<div id="appSingleGuide" ></div>
 		{{ function('wp_footer') }}
 	</body>
 </html>
