--- a/wp-content/themes/timber-starter-theme/views/base-appsinglepage.twig
+++ b/wp-content/themes/timber-starter-theme/views/base-appsinglepage.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 	<body class="{{body_class}}" data-template="base.twig">
 		{{ function('wp_body_open') }}
-	 	<div id="appHomePage"></div>
+	 	<div id="appSinglePage" ></div>
 		{{ function('wp_footer') }}
 	</body>
 </html>
